use bundler for solargraph

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "snippets.textmateSnippetsRoots": [
     "~/Library/ApplicationSupport/Code/User/snippets"
-  ]
+  ],
+  "solargraph.useBundler": true
 }
