bundle exec solargraph

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -2,5 +2,5 @@
   "snippets.textmateSnippetsRoots": [
     "~/Library/ApplicationSupport/Code/User/snippets"
   ],
-  "solargraph.useBundler": true
+  "solargraph.useCommand": "bin/bundle exec solargraph"
 }
